--- a/config/database.yml
+++ b/config/database.yml
@@ -5,31 +5,23 @@
 #   gem "sqlite3"
 #
 default: &default
-  adapter: mysql2
-  encoding: utf8mb4
-  collation: utf8mb4_0900_ai_ci
+  adapter: sqlite3
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  username: rails 
-  password: rails123
-  host: localhost
+  timeout: 5000
 
 development:
   <<: *default
-  database: hotel_constantino_development
+  database: db/development.sqlite3
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: hotel_constantino_test
-
+  database: db/test.sqlite3
 
 # Store production database in the storage/ directory, which by default
 # is mounted as a persistent Docker volume in config/deploy.yml.
 production:
   <<: *default
-  database: hotel_constantino_production
-  username: <%= ENV["MYSQL_USER"] %>
-  password: <%= ENV["MYSQL_PASSWORD"] %>
-  host: <%= ENV["MYSQL_HOST"] %>
+  database: db/production.sqlite3
