--- a/config/database.yml
+++ b/config/database.yml
@@ -33,3 +33,7 @@ cable:
 queue:
   <<: *default
   database: <%= ENV.fetch("QUEUE_DATABASE_PATH", ENV.fetch("DATABASE_PATH", Rails.root.join("db", "queue.sqlite3"))) %>
+
+cache:
+  <<: *default
+  database: <%= ENV.fetch("CACHE_DATABASE_PATH", ENV.fetch("DATABASE_PATH", Rails.root.join("db", "cache.sqlite3"))) %>
