--- a/config/database.yml
+++ b/config/database.yml
@@ -5,12 +5,12 @@
 #   gem "sqlite3"
 #
 default: &default
-  adapter: sqlite3
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   timeout: 5000
 
 development:
   <<: *default
+  adapter: sqlite3
   database: db/development.sqlite3
 
 # Warning: The database defined as "test" will be erased and
@@ -18,22 +18,22 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
+  adapter: sqlite3
   database: db/test.sqlite3
 
-# Store production database in the storage/ directory, which by default
-# is mounted as a persistent Docker volume in config/deploy.yml.
 production:
   <<: *default
-  database: <%= ENV.fetch("DATABASE_PATH", Rails.root.join("db", "production.sqlite3")) %>
+  url: <%= ENV.fetch("DATABASE_URL") %>
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 
 cable:
   <<: *default
-  database: <%= ENV.fetch("CABLE_DATABASE_PATH", ENV.fetch("DATABASE_PATH", Rails.root.join("db", "cable.sqlite3"))) %>
+  url: <%= ENV["CABLE_DATABASE_URL"] || ENV["DATABASE_URL"] || "sqlite3:#{Rails.root.join("db", "cable.sqlite3").to_s}" %>
 
 queue:
   <<: *default
-  database: <%= ENV.fetch("QUEUE_DATABASE_PATH", ENV.fetch("DATABASE_PATH", Rails.root.join("db", "queue.sqlite3"))) %>
+  url: <%= ENV["QUEUE_DATABASE_URL"] || ENV["DATABASE_URL"] || "sqlite3:#{Rails.root.join("db", "queue.sqlite3").to_s}" %>
 
 cache:
   <<: *default
-  database: <%= ENV.fetch("CACHE_DATABASE_PATH", ENV.fetch("DATABASE_PATH", Rails.root.join("db", "cache.sqlite3"))) %>
+  url: <%= ENV["CACHE_DATABASE_URL"] || ENV["DATABASE_URL"] || "sqlite3:#{Rails.root.join("db", "cache.sqlite3").to_s}" %>
