--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -39,6 +39,8 @@ env:
     # Run the Solid Queue Supervisor inside the web server's Puma process to do jobs.
     # When you start using multiple servers, you should split out job processing to a dedicated machine.
     SOLID_QUEUE_IN_PUMA: true
+  APP_HOST: app.example.com
+  FORCE_SSL: true
 
     # Set number of processes dedicated to Solid Queue (default: 1)
     # JOB_CONCURRENCY: 3
@@ -66,6 +68,7 @@ aliases:
 # Recommended to change this to a mounted volume path that is backed up off server.
 volumes:
   - "hotel_constantino_storage:/rails/storage"
+  - "hotel_constantino_db:/rails/db"
 
 
 # Bridge fingerprinted assets, like JS and CSS, between versions to avoid
